# vox-agent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  architecture.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
examples/: booking_call.py
scripts/: verify_full.py  verify_tiny.py
tests/: test_audio.py  test_nlu_context.py  test_pii.py  test_pipeline.py  test_tools.py
vox_agent/: __init__.py  cli.py  config.py  metrics.py  models.py  pipeline.py  server.py  sim.py  state.py
vox_agent/audio/: __init__.py  jitter.py  pcm.py  synth.py  vad.py
vox_agent/dialog/: __init__.py  context.py  nlu.py  pii.py  state_machine.py
vox_agent/llm/: __init__.py  base.py  mock.py  openai_compat.py  prompts.py
vox_agent/stt/: __init__.py  base.py  deepgram.py  mock.py
vox_agent/tools/: __init__.py  calendar_db.py  registry.py
vox_agent/tts/: __init__.py  base.py  cartesia.py  elevenlabs.py  mock.py
web/: index.html
